--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,50 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 
+body {
+    font-family: 'Ubuntu', sans-serif;
+    background-color: #f0f0f0;
+}
+
+.container {
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 2em;
+    background-color: rgba(255, 255, 255, 0.5);
+    /* Set the background color to be transparent */
+    border-radius: 1em;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    /* Adjust the alpha value here for the box shadow transparency */
+    margin-top: 10em;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 1em;
+    margin: 1em auto;
+    border: 1px solid #ccc;
+    border-radius: 0.6em;
+}
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.weather-info {
+    margin-top: 20px;
+}
+
+/* Add more styles as needed */
